# xppenfbsd

./: LICENSE.md  README.md  pyproject.toml
src/xppen_mini7_v2_fbsd/: cli.py  constants.py  socket_forwarder.py  stylus.py  uinput_forwarder.py  usbio.py
